# graphql-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/2020-12-01-031124_create_users/: up.sql
migrations/2020-12-01-031139_create_links/: down.sql  up.sql
src/: auth.rs  context.rs  db.rs  graphql_schema.rs  jwt.rs  links.rs  main.rs  schema.rs  users.rs
