[package]
name = "graphql"
version = "0.1.0"
authors = ["Jose Luis <jlmanriquezro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.4.0"
actix-service = "1.0.6"
futures = "0.3.8"
env_logger = "0.7.1"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.14.2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
bcrypt = "0.9.0"
